--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/_variables.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/_variables.scss
@@ -1,4 +1,5 @@
-$top-popup-navbar-height: 70px;
+$top-navbar-height: 70px;
+$top-popup-navbar-height: 50px;
 $helper-factor-spacing: 40px;
 
 // Grey
